# xPUBench

./: LICENSE  README.md
doca-gpu-app/: README.md  compile_and_run.sh  gpunetio_common.h  gpunetio_simple_receive_main.c  local.sh  meson.build
doca-gpu-app/device/: gpunetio_simple_receive_kernel.cu
doca-gpu-app/host/: gpunetio_simple_receive_sample.c
dpa-app/: .clang-format  .gitignore  CMakeLists.txt  README.md  build_dpacc_samples.sh  sync_code.sh
dpa-app/flexio/dpa_xpu/: CMakeLists.txt  dpa_xpu.cpp  dpa_xpu.h  main.cpp
dpa-app/flexio/dpa_xpu/common/: dpa_xpu_common.h
dpa-app/flexio/dpa_xpu/device/: dpa_xpu_device.c
dpa-app/wrapper_flexio/: common_cross.h  wrapper_flexio.cpp  wrapper_flexio.hpp  wrapper_flexio_device.c
fastclick-dpu/: README.md  configure  configure.in
fastclick-dpu/elements/ip/: lineariplookup.cc
fastclick-dpu/include/click/: sync.hh
fastclick-dpu/userlevel/: Makefile.in
fastclick-gpu/: README.md  configure  configure.in
fastclick-gpu/elements/cuda/: gpuelementcoalescent.cc  gpuelementcommlist.cc  gpuiplookupcoalescent.cc  gpuiplookupcoalescent.hh  gpuiplookupcommlist.cc  gpuiplookupcommlist.hh
fastclick-gpu/elements/ip/: lineariplookup.cc  lineariplookup.hh
fastclick-gpu/elements/userlevel/: dpdkinfo.cc  dpdkinfo.hh
fastclick-gpu/include/click/: dpdkdevice.hh
fastclick-gpu/lib/: dpdkdevice.cc
scripts/: README.md  benchlab.py  main_script.npf  run_dpa.sh  runs_split.sh
scripts/cluster/: atchoum.node  bf2-benchlab.node  bf2-jaskier-max.node  bf2-jaskier.node  bf3-atchoum-max.node  bf3-atchoum.node  grincheux.node  jaskier.node  rpi.node  sam.node  sauron.node
scripts/crc/: dpdk-crc.click.npf  gpu-crc-coalescent.click.npf  gpu-crc-commlist.click.npf  gpu-crc-mw.click.npf  workload-dpu.npf
scripts/ethermirror/: dpdk-bounce.click.npf  gpu-bounce-coalescent.click.npf  gpu-bounce-commlist.click.npf  gpu-bounce-mw.click.npf  workload-dpu.npf
scripts/iplookup/: dpdk-iplookup.click.npf  gpu-iplookup-coalescent.click.npf  gpu-iplookup-commlist.click.npf  gpu-iplookup-mw.click.npf  workload-dpu.npf
scripts/ipmi/: ReleaseNotes.txt  version
scripts/ipmi/FreeBSD/: ipmicfg.bsd
scripts/ipmi/Linux/32bit/: IPMICFG-Linux.x86
scripts/ipmi/UEFI/: IPMICFG.efi
scripts/modules/: cpufreq-script-v2.npf
scripts/modules/shared/: benchlab.npf  script-power.npf
scripts/rapl/: .gitignore  Makefile
scripts/shared/: cfg-dpa.lua.npf  cfg-dpu.lua.npf  cfg.lua.npf  doca-workload.npf  dpa-workload.npf  pyexit.npf  script-generator-dpa.npf  script-generator-dpu.npf  script-generator.npf  script-workload.npf  uncore.npf
